Added : Feature to load indian state codes from csv file